# c-k8s

./: .gitmodules  CMakeLists.txt  README.md  apiServer.c  client.c  server.c
docker-client/: client.c  client.h  test_client.c
etcd-client/: etcdClient.c  etcdClient.h  test.ply  test_etcdClient.c
http/: http.c  http.h  httpClient.c  httpClient.h  test_http.c
utils/unix-socket/: client.c  client.h  server.c  server.h  test_client.c  test_server.c
